--- a/autobroadcast_rackup.service
+++ b/autobroadcast_rackup.service
@@ -8,7 +8,7 @@ Type=simple
 User=rick
 Group=rick
 WorkingDirectory=/home/rick/apps/auto-broadcast-generator
-ExecStart=/usr/local/bin/fish -ic "bundle exec rackup --host 0.0.0.0 --port 3000"
+ExecStart=/usr/bin/fish -ic "bundle exec rackup --host 0.0.0.0 --port 3000"
 Restart=always
 RestartSec=1
 
